charts/argocd-hro/argo-rollout-dashboasrd-install.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: argo-rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
spec:
  ports:
  - port: 3100
    protocol: TCP
    targetPort: 3100
  selector:
    app.kubernetes.io/name: argo-rollouts-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: argo-rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-rollouts-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-rollouts-dashboard
    spec:
      imagePullSecrets:
        - name: hero-reg
      containers:
      - image: tbd5d1uh.private-ncr.fin-ntruss.com/k8s/dev/devops/argoproj/kubectl-argo-rollouts:v1.4.1
        name: argo-rollouts-dashboard
        ports:
        - containerPort: 3100
      serviceAccountName: argo-rollouts-dashboard
